# open2c_vignettes

./: pyproject.toml
