[project]
authors = [{name = "David Kouril", email = "david.kouril@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "open2c_vignettes"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
open2c_vignettes = { path = ".", editable = true }
polychrom = { git = "https://git@github.com/open2c/polychrom.git" }
nglutils = { git = "https://git@github.com/mirnylab/nglutils.git" }

[tool.pixi.tasks]
lab = "jupyter lab"

[tool.pixi.dependencies]
openmm = ">=8.1.2,<9"
jupyterlab = ">=4.2.5,<5"
